--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,24 @@
+# Her şeyi yok say
+/*
+
+# Temel Unity klasörlerini yok say
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/[探]ogs/
+/[Ll]ogs/
 /[Uu]serSettings/
-MemoryCaptures/
-Recording/
-/Assets/AssetStoreTools*
-*.csproj
-*.unityproj
-*.sln
-*.suo
-*.tmp
-*.user
-*.userprefs
-*.pidb
-*.booproj
-*.svd
-*.pdb
-*.opendb
-*.IDB
-*.orig
-*.m4v
-*.apk
-*.unitypackage
-.DS_Store
+/UserSettings/
+
+# Bu dosyalara/klasörlere İZİN VER
+!/.gitignore
+!/Assets/
+
+# Assets içindeki her şeyi yok say ama Scripts'e izin ver
+/Assets/*
+!/Assets/Scripts/
+
+# Meta dosyalarını da aynı şekilde yönet
+*.meta
+!/Assets/Scripts/**/*.meta
